--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente por Desarrollo
-configuracion.autor.nombre=Maxi
-configuracion.autor.email=maxi@correo.com
+configuracion.texto=Configurando entorno Desarrollo ...
+configuracion.autor.nombre=Maxi Doe
+configuracion.autor.email=maxi.doe@correo.com
