--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando entorno Desarrollo ...
-configuracion.autor.nombre=Maxi Doe
-configuracion.autor.email=maxi.doe@correo.com
+configuracion.autor.nombre=Maxi Doea
+configuracion.autor.email=maxi.doea@correo.com
